# django-query-budget

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: actions.md  api.md  changelog.md  conf.py  configuration.md  getting-started.md  hooks.md  index.md  requirements.txt  sync.md  usage.md
src/django_query_budget/: __init__.py  actions.py  apps.py  budget.py  constraints.py  decorators.py  fingerprint.py  hooks.py  middleware.py  models.py  resolution.py  settings.py  tracker.py  wrapper.py
src/django_query_budget/migrations/: 0001_initial.py
src/django_query_budget/sync/: __init__.py  base.py  db.py  redis.py  worker.py
tests/: conftest.py  django_settings.py  test_actions.py  test_budget.py  test_constraints.py  test_decorator.py  test_e2e.py  test_fingerprint.py  test_hooks.py  test_integration_mysql.py  test_integration_postgres.py  test_integration_redis.py  test_middleware.py  test_performance.py  test_resolution.py  test_settings.py  test_sync_db.py  test_sync_redis.py  test_sync_worker.py  test_tracker.py  test_wrapper.py
